@@ -4,14 +4,22 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dao.repository.FriendsRepository;
+import ru.yandex.practicum.filmorate.dao.repository.UserRepository;
+import ru.yandex.practicum.filmorate.dto.user.UpdateUserRequest;
 import ru.yandex.practicum.filmorate.exception.ObjectNotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
+import ru.yandex.practicum.filmorate.mapper.UserMapper;
+import ru.yandex.practicum.filmorate.model.FriendshipStatus;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
 
 import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
+
+import static ru.yandex.practicum.filmorate.mapper.FriendMapper.mapToAllFriendDto;
+import static ru.yandex.practicum.filmorate.mapper.FriendMapper.mapToUserPairFriendDto;
 
 @Slf4j
 @Service
@@ -20,10 +28,20 @@ public class UserService {
 
     @Autowired
     private final UserStorage userStorage;
+    @Autowired
+    private FriendsRepository friendsRepository;
+    @Autowired
+    private UserRepository userRepository;
 
     public User addUser(final User user) {
         if (valid(user)) {
-            return userStorage.addUser(user);
+            User result = userStorage.addUser(user);
+            if (result != null) {
+                log.info("User added: {}", result);
+            } else {
+                log.info("User added but not saved");
+            }
+            return result;
         } else {
             log.warn("User {} not valid when added", user);
             throw new ValidationException("User no valid ");
@@ -31,26 +49,17 @@ public class UserService {
     }
 
     public User updateUser(final User user) {
-        HashMap<Long, User> users = userStorage.getAllUsers();
-        if (user.getId() != null && users.containsKey(user.getId())) {
-            User oldUser = users.get(user.getId());
-            if (user.getLogin().isEmpty()) {
-                user.setLogin(oldUser.getLogin());
-            }
-            if (user.getEmail().isEmpty()) {
-                user.setEmail(oldUser.getEmail());
-            }
-            if (user.getName().isEmpty()) {
-                user.setName(oldUser.getName());
-            }
-            if (user.getBirthday() == null) {
-                user.setBirthday(oldUser.getBirthday());
-            }
-            user.setFriends(oldUser.getFriends());
-            if (valid(user)) {
-                return userStorage.updateUser(user);
+        if (user.getId() != null) {
+            User oldUser = userStorage.getUserById(user.getId());
+            UpdateUserRequest updateUser = UserMapper.mapToUpdateUserRequest(user);
+            User result = UserMapper.updateUserFields(oldUser, updateUser);
+            if (valid(result)) {
+                if (!result.getFriends().isEmpty()) {
+                    updateFriends(result.getId(), result.getFriends());
+                }
+                return userStorage.updateUser(result);
             } else {
-                log.warn("User {} not valid when updated", user);
+                log.warn("User {} not valid when updated", result);
                 throw new ValidationException("User no valid");
             }
         } else {
@@ -63,58 +72,46 @@ public class UserService {
         return userStorage.getAllUsers().values();
     }
 
+
     public User addFriend(final long idUser, final long idFriend) {
-        User user = userStorage.getAllUsers().get(idUser);
-        User friend = userStorage.getAllUsers().get(idFriend);
-        if (user != null && friend != null) {
-            user.getFriends()
-                    .add(idFriend);
-            friend.getFriends()
-                    .add(user.getId());
-            log.info("Пользователи с id: {} и {}, теперь являются друзьями", user, friend);
-            return friend;
-        } else {
-            throw new ObjectNotFoundException("Неверны id");
-        }
+        User user = userStorage.getUserById(idUser);
+        userStorage.getUserById(idFriend);
+        long id = userStorage.addFriend(mapToAllFriendDto(idUser, idFriend));
+        log.info("Пользователи с id: {} отправил запрос на друзья: {}", idUser, idFriend);
+        return user;
     }
 
     public void removeFriend(final long idUser, final long idFriend) {
-
-        User friend = userStorage.getAllUsers().get(idFriend);
-        User user = userStorage.getAllUsers().get(idUser);
-        if (user != null && friend != null) {
-            user.getFriends()
-                    .remove(idFriend);
-            friend.getFriends()
-                    .remove(idUser);
-            log.info("Пользователи с id: {} и {}, больше не являются друзьями", user, friend);
-        } else {
-            throw new ObjectNotFoundException("Неверны id");
+        User user = userStorage.getUserById(idUser);
+        userStorage.getUserById(idFriend);
+        if (userStorage.removeFriend(mapToUserPairFriendDto(idUser, idFriend))) {
+            log.info("Пользователи с id: {} и {}, больше не являются друзьями", idUser, idFriend);
         }
     }
 
     public Collection<User> getFriends(final long id) {
-        User user = userStorage.getAllUsers().get(id);
-        if (user == null) {
-            throw new ObjectNotFoundException("Не найден друг с id: " + id);
-        }
-        return user.getFriends().stream()
-                .map(ind -> userStorage.getAllUsers().get(ind))
-                .collect(Collectors.toList());
+        userStorage.getUserById(id);
+        List<Long> friendIds = userStorage.getFriendsByUser(id).keySet().stream().toList();
+        return userStorage.getUsersByListId(friendIds);
     }
 
-    public Collection<User> getListOfMutualFriends(final long userId, final long friendId) {
-        User user = userStorage.getAllUsers().get(userId);
-        User friend = userStorage.getAllUsers().get(friendId);
+    private void updateFriends(long userId, HashMap<Long, FriendshipStatus> friends) {
+        Set<Long> oldFriends = userStorage.getFriendsByUser(userId).keySet();
 
-        if (user == null || friend == null) return Collections.emptyList();
+        Set<Long> toRemove = oldFriends.stream()
+                .filter(friend -> !friends.containsKey(friend))
+                .collect(Collectors.toSet());
 
-        Set<Long> mutualFriends = new HashSet<>(user.getFriends());
-        mutualFriends.retainAll(friend.getFriends());
+        Set<Long> toAdd = friends.keySet().stream()
+                .filter(genre -> !oldFriends.contains(genre))
+                .collect(Collectors.toSet());
 
-        return mutualFriends.stream()
-                .map(id -> userStorage.getAllUsers().get(id))
-                .toList();
+        friendsRepository.removeFriendsByListId(toRemove.stream().map(friend -> mapToUserPairFriendDto(userId, friend)).toList());
+        friendsRepository.addFriendsByListId(toAdd.stream().map(friend -> mapToUserPairFriendDto(userId, friend)).toList());
+    }
+
+    public long confirmedFriend(final long idUser, final long idFriend) {
+        return userStorage.confirmedFriend(mapToUserPairFriendDto(idUser, idFriend));
     }
 
     private static boolean valid(User user) {
@@ -125,4 +122,15 @@ public class UserService {
                 user.getBirthday().isBefore(LocalDate.now());
     }
 
+
+    public Collection<User> getListOfMutualFriends(long id, long otherId) {
+        userStorage.getUserById(id);
+        userStorage.getUserById(otherId);
+        Set<Long> friends = userStorage.getFriendsByUser(id).keySet();
+        return userStorage.getUsersByListId(
+                userStorage.getFriendsByUser(otherId).keySet()
+                        .stream()
+                        .filter(friends::contains)
+                        .toList());
+    }
 }
